[package]
name = "stage"
version = "0.1.0"
edition = "2024"

[dependencies]
stage-macros = { path = "../stage-macros" }
crossbeam-deque = "0.8"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
trybuild = "1"
